latest from westminster-drops-8

--- a/themes/custom/westminster_theme/westminster_theme.libraries.yml
+++ b/themes/custom/westminster_theme/westminster_theme.libraries.yml
@@ -1,3 +1,11 @@
+base:
+  version: 1.x
+  css:
+    theme:
+      css/style.css: {}
+  dependencies:
+    - yorkshire/base
+
 schedule:
   version: 1.x
   js:
