--- a/config/install/system.site.yml
+++ b/config/install/system.site.yml
@@ -1,10 +1,5 @@
 page:
   403: /user/login
   404: ''
-  front: /user/login
+  front: /content
 admin_compact_mode: false
-uuid: 945d51fb-b396-4a01-bd02-2da0bb9d6001
-name: 'Testminster Master'
-langcode: en
-default_langcode: en
-mail: matt.schuh@zebradog.com
