--- a/themes/custom/westminster_theme/westminster_theme.info.yml
+++ b/themes/custom/westminster_theme/westminster_theme.info.yml
@@ -5,6 +5,8 @@ package: Custom
 type: theme
 version: 1.0.0
 core: 8.x
+libraries:
+  - westminster_theme/base
 regions:
   brand: Site Branding
   header: Header
@@ -13,3 +15,6 @@ regions:
   bottom: Bottom
   sidebar: Sidebar
   footer: Footer
+features:
+  - favicon
+  - logo
